test/tests/stages/13_floating-point_numbers/valid/constants/round_constants.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 1.000000
                    None: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 1.000000
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 9223372036854777856.000000
                    None: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 9223372036854777856.000000
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
