test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/bitwise_shift_double_2.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CBitShiftLeft: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 2.000000
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
